// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package rpcpb;

import "google/api/annotations.proto";

service Faucet {
  rpc Claim(ClaimReq) returns (ClaimResp) {
    option (google.api.http) = {
        post: "/v1/faucet/claim"
        body: "*"
    };
  }

}

message ClaimReq {
  string addr = 1;
  uint64 amount = 2;
}

message ClaimResp {
  int32 code = 1;
  string message = 2;
  string hash = 3;
}

